# goof

./: .gitignore  Cargo.toml  README.md  README.org  gen-readme.el
docs/: error-algebra.md  llm-policy.md
goof-derive/: Cargo.toml
goof-derive/src/: lib.rs
src/: aggregate.rs  context.rs  lib.rs  main.rs  mishap.rs  mismatch.rs  outside.rs  unknown.rs
tests/: derive.rs
