[package]
name = "goof"
version = "0.3.4"
authors = ["Aleksandr Petrosyan <appetrosyan@icloud.com>"]
edition = "2021"
description = "A reusable, composable, aggregate and `no_std`-friendly error library"
license = "Apache-2.0"
repository = "https://github.com/appetrosyan/goof"

[workspace]
members = ["goof-derive"]

[dependencies]
goof-derive = { path = "goof-derive", version = "0.3.3" }

[lints.rust]
# `#[derive(Error)]` emits code gated on this nightly cfg for backtrace
# support; declare it so downstream builds don't warn about it.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(error_generic_member_access)'] }
