[package]
name = "goof"
version = "0.4.0"
authors = ["Aleksandr Petrosyan <appetrosyan@icloud.com>"]
edition = "2021"
description = "A reusable, composable, aggregate and `no_std`-friendly error library"
license = "Apache-2.0"
repository = "https://github.com/appetrosyan/goof"

[workspace]
members = ["goof-derive"]

[features]
default = ["std"]
# Pulls in the `std` crate. Currently only a super-set of `alloc`; reserved
# for future std-only helpers (e.g. `Backtrace` integration).
std = ["alloc"]
# Enables the allocator-backed types `Mishap` and `Context`.
alloc = []

[dependencies]
goof-derive = { path = "goof-derive", version = "0.3.3" }

[lints.rust]
# `#[derive(Error)]` emits code gated on this nightly cfg for backtrace
# support; declare it so downstream builds don't warn about it.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(error_generic_member_access)'] }
