[package]
name = "goof-derive"
version = "0.3.2"
authors = ["Aleksandr Petrosyan <appetrosyan@icloud.com>"]
edition = "2021"
description = "Derive macros for the goof error library"
license = "Apache-2.0"
repository = "https://github.com/appetrosyan/goof"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
